6.1.6
-----
1. Fix tiny sub-text for in exapnded nowplaying at certain sizes.

6.1.5
-----
1. When requesting 'Random albums/releases' for scrolled lists obtain complete
   list, but initially only show N items - use stored list for 'More'.
2. Fix invoking 'Download' from scrolled list.
3. Add note about popups to download confirmation dialog.
4. Disable downloads on iOS once more.
5. Fix scrolled list order being reset.
6. Fix scrolled list selection dialog when items have multi-line sub-text.
7. Add Swedish translation - thanks to Johan Saaw.

6.1.4
-----
1. Don't show group player's in sync dialog, instead allow showing sync dialog
   from group player (but only if group is playing).
2. Fix reading 'Show ratings' from default settings.
3. If track has a grouping, or disc-subtitle, then show this after album in
   now-playing.
4. Don't prompt for confirmation when power on/off all players from 'Manage
   players' dialog.
5. Add menu to navigation drawer to sleep or power on/off all players.
6. Allow 3rd party scrolled lists to update titles - thanks to Michael Herger.

6.1.3
-----
1. Add group players to sync dialog.
2. Only handle 'Esc' key if keyboard shortcuts enabled.
3. Allow list of 3rd party scrolled lists to be updated.
4. When dropping external files onto queue don't clear any existing tracks.
5. Allow downloads on iOS.
6. If set to show track subtitle then append this to title.

6.1.2
-----
 1. Alphabetically order user-defined roles in MAI track info.
 2. Add 'Set/Disc subtitle' to advanced search for LMS 9.0+ - thanks to Michael
    Herger.
 3. Add Spanish translation - thanks to arpena.
 4. In mobile layout with bottom navigation add more padding between this and
    controls.
 5. Re-add 'Play all' and 'Add all' actions to clamped search results.
 6. If unpinned queue is shown then close when click on browse view.
 7. Fix not being able to interact with queue when its shown over now-playing
    when using Firefox.